client/src/styles/_forms.less
.form-group {
  --input-background-color: var(--color-ffffff);
  --toggle-switch-on-background-color: var(--blue-darken-55);
  --toggle-switch-off-background-color: var(--color-cccccc);
  --toggle-switch-switcher-background-color: var(--color-ffffff);

  input[type=password].form-control,
  input[type=text].form-control,
  select.form-control {
    border-radius: 3px;
    border: solid 1px var(--silver-darken-80);
    background-color: var(--input-background-color);
    width: 100%;
    height: 30px;
    font-size: 13px;
    padding-left: 8px;
    color: var(--grey-darken-30);
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: normal;
    letter-spacing: normal;
    float: left;
  }

  // hide but remain accessible: https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
  input[type=file].form-control {
    position: absolute !important;
    height: 1px;
    width: 1px;
    overflow: hidden;
    clip: rect(1px 1px 1px 1px);
  }

  input[type=file].form-control:focus-within + label {
    box-shadow: var(--focus-shadow);
    border: solid 1px var(--blue-darken-55);
  }

  // make sure outline doesn't cover the block
  input[type=file].form-control + label {
    display: inline-flex;
    justify-content: center;
    align-items: center;

    margin-left: 4px;
    min-width: 50px;
    height: 25px;

    font-size: 13px;
    color: #fdfdfe;
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
    border: solid 1px var(--blue-darken-62);
    background-color: var(--blue-base-65);

    &:hover {
      border: solid 1px var(--blue-darken-55);
      background-color: var(--blue-darken-62);
    }

    &:active {
      border: solid 1px var(--blue-darken-48);
      background-color: var(--blue-darken-55);
    }
  }

  input[type=password].form-control::placeholder,
  input[type=text].form-control::placeholder {
    font-size: 13px;
    font-weight: normal;
    font-stretch: normal;
    font-style: italic;
    line-height: normal;
    letter-spacing: normal;
    color: var(--grey-lighten-56);
  }

  input[type=password].form-control:focus,
  input[type=text].form-control:focus,
  select.form-control:focus {
    outline: none;
    box-shadow: 0 0 0 4px var(--blue-lighten-82), 0 0 0 1px var(--silver-darken-80) inset;
    border: solid 1px var(--blue-darken-55);
  }

  input[type=password].form-control.is-invalid,
  input[type=text].form-control.is-invalid {
    border: solid 1px var(--red-base-62);
  }

  input[type=password].form-control.is-invalid:focus,
  input[type=text].form-control.is-invalid:focus {
    outline: none;
    box-shadow: 0 0 0 4px var(--red-lighten-85), 0 0 0 1px var(--silver-darken-80) inset;
    border: solid 1px var(--red-base-62);
  }

  label {
    display: block;
    margin-bottom: 6px;
    font-size: 12px;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: normal;
    letter-spacing: normal;
    color: var(--grey-darken-30);
  }

  .form-check-inline {
    display: grid;
    grid-auto-columns: 0.4fr;
    grid-auto-flow: column;
  }

  .custom-control {

    label {
      font-size: 13px;
    }

    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: normal;
    letter-spacing: normal;
    color: var(--grey-darken-30);

    .custom-control-input:checked,
    .custom-control-input:not(:checked) {
      position: absolute;
      left: -9999px;
    }

    // the text
    .custom-control-input:checked + .custom-control-label,
    .custom-control-input:not(:checked) + .custom-control-label {
        position: relative;
        padding-left: 26px;
        line-height: 20px;
        display: inline-block;
    }

    // radio control
    .custom-control-input:not(:checked) + .custom-control-label:after {
        opacity: 0;
    }
    .custom-control-input:checked + .custom-control-label:after {
        opacity: 1;
    }

    .custom-control-label:focus {
      outline: none;
    }

    .custom-control-input:focus + .custom-control-label:before {
      box-shadow: 0 0 0 4px var(--blue-lighten-82), 0 0 0 1px var(--silver-darken-80) inset;
      border: solid 1px var(--blue-darken-55) !important;
    }
  }

  .custom-checkbox {

    // border of the radio
    .custom-control-input:checked + .custom-control-label:before,
    .custom-control-input:not(:checked) + .custom-control-label:before {
        content: '';
        position: absolute;
        left: 0;
        top: 0;
        width: 16px;
        height: 16px;
        border: 1px solid var(--silver-darken-80);
        border-radius: 3px;
        background: var(--color-ffffff);
    }

    // inside the checkbox
    .custom-control-input:checked + .custom-control-label:after,
    .custom-control-input:not(:checked) + .custom-control-label:after {
      position: absolute;
      left: 1px;
      width: 16px;
      height: 16px;
      content: "";
      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='16' height='16' viewBox='0 0 16 16'%3E%3Cpolygon fill-rule='evenodd' points='5.743 14.314 1 9.57 2.897 7.673 5.743 10.519 13.103 3.16 15 5.057'/%3E%3C/svg%3E%0A");
    }
  }

  .custom-radio {

    // border of the radio
    .custom-control-input:checked + .custom-control-label:before,
    .custom-control-input:not(:checked) + .custom-control-label:before {
        content: '';
        position: absolute;
        left: 0;
        top: 0;
        width: 16px;
        height: 16px;
        border: 1px solid var(--silver-darken-80);
        border-radius: 100%;
        background: var(--color-ffffff);
    }

    // inside the radio
    .custom-control-input:checked + .custom-control-label:after,
    .custom-control-input:not(:checked) + .custom-control-label:after {
        content: '';
        width: 8px;
        height: 8px;
        background-color: var(--grey-darken-23);
        position: absolute;
        top: 5px;
        left: 5px;
        border-radius: 100%;
    }

    // radio control
    .custom-control-input:not(:checked) + .custom-control-label:after {
        opacity: 0;
    }
    .custom-control-input:checked + .custom-control-label:after {
        opacity: 1;
    }

    .custom-control-label:focus {
      outline: none;
    }

    .custom-control-input:focus + .custom-control-label:before {
      box-shadow: 0 0 0 4px var(--blue-lighten-82), 0 0 0 1px var(--silver-darken-80) inset;
      border: solid 1px var(--blue-darken-55) !important;
    }
  }

  // feedback / tooltip
  .invalid-feedback {
      width: 16px;
      height: 14px;
      display: inline-block;
      margin-left: 6px;
      margin-top: 8px;
      position: relative;

    .invalid-tooltip {
      visibility: hidden;
      padding-left: 10px;
      padding-right: 10px;
      height: 32px;
      border-radius: 3px;
      box-shadow: 0 1px 2px 0 var(--color-000000-opacity-20);
      border: solid 1px var(--silver-darken-80);
      top: 20px;
      right: -13px;
      white-space: nowrap;
      background-color: var(--color-ffffff);
      position: absolute;
      z-index: 1;
      font-size: 13px;
      font-weight: normal;
      font-stretch: normal;
      font-style: normal;
      line-height: normal;
      letter-spacing: normal;
      display: flex;
      align-items: center;
      justify-content: center;
      color: var(--grey-darken-30);
    }

    .invalid-tooltip:before,
    .invalid-tooltip:after {
      position: absolute;
      content: ' ';
      pointer-events: none;
      color: transparent;
      border-style: solid;
      bottom: 100%;
    }

    .invalid-tooltip:before {
      right: 15px;

      border-width: 5px;
      border-bottom-color: var(--silver-darken-80);
    }

    .invalid-tooltip:after {
      right: 16px;

      border-width: 4px;
      border-bottom-color: var(--color-ffffff);
    }

    &:hover .invalid-tooltip {
      visibility: visible;
    }
  }

  .file-list {
    padding-left: 8px;
    padding-top: 5px;
    margin: 0;

    font-size: 13px;
    list-style-type: none;
  }

  .file-list-item {
    display: grid;
    align-items: center;
    grid-template-columns: 100% auto;
  }

  .file-list-item-content {
    display: flex;
    align-items: center;
    grid-column: 1;

    padding: 4px 0 3px;
    border-bottom: 1px solid var(--silver-darken-80);

    .remove {
      display: flex;
      align-items: center;

      padding: 0;
      margin: 0;
      margin-left: auto;

      border: none;
      background-color: transparent;

      svg {
        transform: scale(.8)
      }

      &:hover {
        background-color: var(--silver-darken-94);
      }

      &:focus {
        background-color: var(--silver-darken-87);
      }
    }
  }

  .file-list-item .invalid-feedback {
    grid-column: 2;

    margin-top: 0;
  }

  .file-list-item.is-invalid {
    color: var(--red-base-62);

    .error {
      margin-left: 3px;
    }
  } 
}

.custom-control-toggle {

  margin-top: -8px;
  
  > .description {
    margin:6px 0 6px 38px;
    font-size: 13px;
    color: var(--grey-lighten-56);

  }
  
  .toggle-switch .field-wrapper {
    display: flex;
    flex-direction: row;
    align-items: center;
  }
  
  .toggle-switch > .label {
    font-size: var(--text-size-base);
  }
  
  .toggle-switch .toggle-switch__label {
    margin: 0;
    margin-left: 6px;
    font-size: var(--text-size-base);
  }
  
  .toggle-switch .toggle-switch__switcher {
    position: relative;
    width: 32px;
    height: 16px;
  }
  
  .toggle-switch .toggle-switch__switcher input[type='checkbox'] {
    opacity: 0;
    width: 0;
    height: 0;
  }
  
  .toggle-switch .toggle-switch__switcher .toggle-switch__slider {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: var(--toggle-switch-off-background-color);
    -webkit-transition: 0.4s;
    transition: 0.4s;
    border-radius: 34px;
  }
  
  .toggle-switch .toggle-switch__switcher .toggle-switch__slider:before {
    position: absolute;
    content: "";
    height: 12px;
    width: 12px;
    left: 2px;
    bottom: 2px;
    background-color: var(--toggle-switch-switcher-background-color);
    -webkit-transition: 0.4s;
    transition: 0.4s;
    border-radius: 50%;
  }
  
  .toggle-switch .toggle-switch__switcher input[type='checkbox']:checked + .toggle-switch__slider {
    background-color: var(--toggle-switch-on-background-color);
    box-shadow: 0 0 1px ;
  }
  
  .toggle-switch .toggle-switch__switcher input[type='checkbox']:checked + .toggle-switch__slider:before {
    -webkit-transform: translateX(16px);
    -ms-transform: translateX(16px);
    transform: translateX(16px);
  }
}

